--- a/backend/src/docs/asciidoc/index.adoc
+++ b/backend/src/docs/asciidoc/index.adoc
@@ -2,3 +2,12 @@
 
 == *USER*
 - link:/docs/user.html[유저 API]
+
+== *Todo*
+- link:/docs/todo.html[할일 API]
+
+== *Schedule*
+- link:/docs/schedule.html[일정 API]
+
+== *Project*
+- link:/docs/project.html[프로젝트 API]
