--- a/backend/src/docs/asciidoc/index.adoc
+++ b/backend/src/docs/asciidoc/index.adoc
@@ -1,7 +1,10 @@
 = 'Haru-Dashboard' API 문서
 
-== *USER*
+== *User*
 - link:/docs/user.html[유저 API]
+
+== *Auth*
+- link:/docs/auth.html[인증 API]
 
 == *Todo*
 - link:/docs/todo.html[할일 API]
